# Moving-Average-Strategy-Backtester

./: .gitignore  CMakeLists.txt  README.md  packages.txt  requirements.txt
.github/workflows/: build-pybind.yml
data/: 1000_entries_sample_data.csv  30_entries_sample_data.csv  Volatile_Price_Data.csv  more_volatile_prices.csv  sample_data.csv
include/: circular_buffer.hpp  csv_loader.hpp  strategy.hpp
python/: app.py  simulate.py
src/: bindings.cpp  csv_loader.cpp  main.cpp  strategy.cpp
tests/: strategy_test.cpp
